# templateGenerate

./: README.md  generate_pic.py  main.py  pyproject.toml  tasks.py
celery_app/: celery.py  celery_worker.py
